--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,36 @@
+#spring.application.name=backendgatomia
+#
+##Configuração do banco de dados(PostgreSQL)
+##spring.datasource.url=jdbc:postgresql://localhost:(porta do postgre)/nomeDoBanco
+##spring.datasource.username=nomeDeUsuarioPostgreSQL
+##spring.datasource.password=senha
+#
+#spring.datasource.url=jdbc:postgresql://localhost:5432/gatomia_db
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
+#
+##Configuração do JPA / Hibernante
+##update: faz a criação das tabelas caso não existam, se existir só atualiza as colunas
+##equivalente ao update database do Entity Framework, mas automático
+#spring.jpa.hibernante.ddl-auto=create
+#
+##Mostra o SQL no console (bom para debug)
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernante.format_sql=true
+#spring.jpa.database-plataform=org.hibernate.dialect.PostgreSQLDialect
+
 spring.application.name=backendgatomia
+
+# Conexão
+spring.datasource.url=jdbc:postgresql://localhost:5432/gatomia_db
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+# JPA e Hibernate
+# 'update' é mais seguro que 'create'. Ele tenta criar se não existir.
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Essa linha força o Spring a usar nomes físicos (tb_users)
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
